--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "netflyx",
+  "homepage": "https://KashishBagga.github.io/Netflyx",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -43,6 +44,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  },
-  "homepage": "http://mayank712jindal.github.io/netflyx"
+  }
 }
